# mg

./: Cargo.toml  README.md  how_to.md  test.txt
src/: main.rs
